Updated the report. Changed the sections and inline text, so that they are the same as the word template.

--- a/01-intro.tex
+++ b/01-intro.tex
@@ -61,46 +61,37 @@ needs of C.'' ``The project aims to present a decision-making basis for\dots''
 ``The project aims to investigate whether or not it is realistic to expect that
 technology A could be used for purpose B in the future.''
 
+\subsection{\translate{Problem statement}}\label{subsec:problem}
+Make a clear problem statement. Preferably in the form: The investigated problem
+statement of this thesis is\dots 
+
+The specified area must be answered later in the report's results, and in its
+conclusion. The problem statement should be so clearly defined, that deciding
+whether or not the problem has been resolved should be easy and understandable.
+
+\subsection{\translate{Scientific goals}/
+            \translate{Knowledge goals}/
+            \translate{Research questions}}\label{subsec:researchquestion}
+
+Split this hard problem into a number of achievable, concrete, and verifiable
+scientific/knowledge goals or a number of research questions. Explain what the
+scientific knowledge gained from this work will be.
+\begin{enumerate}
+  \item ???
+  \item ???
+  \item ???
+\end{enumerate}
+
 \subsection{\translate{Scope}}\label{subsec:scope}
 \noindent
-Examples: ``The study has its focus on\dots. In the survey, the effect of parameter Z
-is ignored, because…. The survey is distinguished by the evaluation of cases F1
-and F2\dots. The survey's conclusions should however be generally valid for
-every\dots.''
-
-\subsection{\translate{Concrete and verifiable goals}}\label{subsec:goals}
-\noindent
-The problem- or objective statement is a verification of the proposed formula
-you will use to reach your objective. The questions that are specified should be
-answered in the report's results, and in its conclusion. The problem statement
-should be so clearly defined that deciding whether or not the problem has been
-resolved should be an easy process. This sub-chapter is usually written after
-the implementation of the theoretical
-study in chapter 2, and should be revised at regular intervals throughout the
-duration of the project. The problem statement might in some cases require to be
-placed after the theoretical study. This way of writing a study may be used if
-it seems to be difficult for the reader to understand the concepts used. The
-disadvantage of such a layout is that the reader might lose interest in the
-subject before the core points have been stated. Examples of problem statements
-useful in a scientific report are ``the survey has
-an objective to respond to the following questions: P1: What importance has
-technology A compared with technology B for the performance measure Y at
-different values on parameter X, for cases F1 and F2? P2: Which profit gives…
-For mathematical definitions of X and Y, see the model in chapter 3.'' It is then
-in chapter 3 that the objective numerical results will be specified, i.e.\ what
-will exist on the x - and y-axis in the diagram you intend to take further.
-Examples of objectives for a technical report: ``the survey's objective is to
-suggest a solution to the following technical problems:\dots the survey has
-further objectives to verify that the solution proposal provides useable
-criteria and to evaluate the proposal with respect to performance measure Y.''
-All technical details are reserved for the structure chapter's technical
-requirement specifications.
+Explain what you have focused your work on and what you have chosen to not focus
+on. What will be in focus? What will not be in focus?
 
 \subsection{\translate{Outline}}\label{subsec:outline}
 \noindent
 Briefly describe the report's outline. ``Chapter 2 describes\dots''
 
-\subsection{\translate{Contributions}}\label{subsec:contributions}
+\subsection{\translate{Division of work}}\label{subsec:contributions}
 \noindent 
 Describe which parts of the work that you have conducted yourself, and which
 parts that you had help with i.e.\ carried out by colleagues. If the work is
