--- a/thesis.tex
+++ b/thesis.tex
@@ -58,10 +58,11 @@
   \include{01-intro}
   \include{02-theory}
   \include{03-method}
-  \include{04-construction}
-  \include{05-result}
-  \include{06-discussion}
-  \include{07-conclusions}
+  \include{04-choice_of_solution}
+  \include{05-implementation}
+  \include{06-result}
+  \include{07-discussion}
+  \include{08-conclusions}
   \addcontentsline{toc}{section}{\translate{References}}
   \printbibliography{}
   \newpage\clearpage
