Changed chapter four from Choice of solution to prestudy

--- a/04-prestudy.tex
+++ b/04-prestudy.tex
@@ -1,5 +1,4 @@
-\section{\translate{Choice of solution}/
-         \translate{Pre study}}\label{sec:choiceofsolution} 
+\section{\translate{Pre study}}\label{sec:prestudy} 
        
 This chapter will present the different options you have faced and made your
 choice between.
