--- a/thesis.tex
+++ b/thesis.tex
@@ -58,7 +58,7 @@
   \include{01-intro}
   \include{02-theory}
   \include{03-method}
-  \include{04-choice_of_solution}
+  \include{04-prestudy}
   \include{05-implementation}
   \include{06-result}
   \include{07-discussion}
