updated a sub heading

--- a/01-intro.tex
+++ b/01-intro.tex
@@ -20,7 +20,7 @@ read the report's summary, introduction and conclusions, since these sections
 are usually written without the inclusion of highly technical and mathematical
 details.
 
-\subsection{\translate{Background and problem motivation}}\label{subsec:background}
+\subsection{\translate{Background and motivation}}\label{subsec:background}
 \noindent 
 In this sub-chapter you should try to quickly engage the readers' interest in
 the problem area you have chosen to examine. Demonstrate that you are not only
