Change goal to phase

--- a/07-discussion.tex
+++ b/07-discussion.tex
@@ -7,7 +7,7 @@ evaluation, etc. Here it is ok to be more subjective/biased.
 
 \subsection{\translate{Project method discussion}}\label{subsec:project_method_discussion}
 Make a deep analysis and discussion of your chosen method, chosen approach,
-chosen metrics, etc. Answer all of your project goals/milestones. Have they
+chosen metrics, etc. Answer all of your project phases/milestones. Have they
 been met?
 
 \subsection{\translate{Scientific discussion}}\label{subsec:scientific_discussion}
