Updated introduction chapter after latest version of the docx-template

--- a/01-intro.tex
+++ b/01-intro.tex
@@ -1,81 +1,37 @@
-\section{\translate{Introduction}}\label{sec:intro}
-During your previous education, you have probably come across relatively well
-defined problem types as formulated by teachers, textbooks and teaching aids.
-During project courses and exam work you are required to do a great deal of the
-thinking by yourself in order to define and clarify the direction of the
-assignment. This analysis should be presented in the report's introductory
-chapter. By describing the problem or problem area chosen for study and the
-reasons behind this choice, it should then be possible to write a general
-introduction to the report. The introductory chapter relates to the content in
-the project plan that will be presented some weeks after the diploma work has
-started. The project plan should also contain a time plan for the work. The
-project plan can also mention some of the intended sources to be read and
-subsequently referred to in chapter 2, and also to contain some thoughts about
-the method (see chapter 3) chosen in order to approach the problem. The
-introduction making up chapter 1, may also contain sub-headings underneath. Try
-to get to the point as soon as possible. In order to retain the reader’s
-interest information concerning your work must be given within the first few
-sentences. People only requiring a quick insight into the work will often only
-read the report's summary, introduction and conclusions, since these sections
-are usually written without the inclusion of highly technical and mathematical
-details.
+\section{\translate{Introduction}}\label{sec:intro} 
+A brief introduction of your work and this chapter. Shortly explain the overall context surrounding
+your work. Explain if it is a project proposed by a company or from a research group.
 
 \subsection{\translate{Background and motivation}}\label{subsec:background}
 \noindent 
-In this sub-chapter you should try to quickly engage the readers' interest in
-the problem area you have chosen to examine. Demonstrate that you are not only
-familiar with any minor technical problems, but also have an understanding of
-the context in which your problem emerges, that you can also describe it from a
-non-technical perspective, and that you are aware of the practical benefits of
-the technology you are examining or have knowledge of areas that your study
-relates to. It is common that the first sentence contains an insightful
-formulation or historical retrospective. Obviously it is not possible to be
-absolutely certain with regards to the future, but you should express your
-hypothesis in a balanced and objective manner in order to appear credible.
+Bakgrund och motivation) Explain the background and the motivation for this work. In this
+sub-chapter you should try to quickly engage the readers' interest in the problem area you have
+chosen to examine. Demonstrate that you are familiar with the technical problem, and that you
+understand the context in which your problem emerges, that you can also describe it from a
+non-technical perspective, and that you are aware of the practical benefits of the technology you
+are examining. It is common that the first sentence contains an insightful formulation or historical
+retrospective.  
 
-Examples: ``Humankind during historical times has\dots. The use of internet and
-cellular telephony has grown since\dots. The next stage in the development is
-expected to become\dots. This can lead to problems with… This study investigates if
-the problem can be solved with the aid of\dots. This technology can become
-especially interesting if in some years many more people\dots, and there is a
-growing demand on the market after\dots''.
-A technical report that is carried out on behalf of a company could start with:
-“Within the organization there is an increased need for\dots and at the same time
-
-\subsection{\translate{Overall aim}}\label{subsec:aim}
+\subsection{\translate{Overall aim and problem statement}}\label{subsec:aim}
 \noindent
-The project's aim is an insightful description of the direction in which you
-want to work, your hopes with regards to the possible outcomes of the project,
-and of the projects' purpose. The hypothesis does not need to be clearly defined
-or concrete. It can be an objective which may or may not be resolved or achieved
-with any degree of certainty. It can be a problem formula of a high level, which
-cannot be answered by the study's diagrams, tables and other objective results,
-but which can be discussed in the report's concluding chapter. Examples: ``the
-project's overall aim is to gain new knowledge within the organization
-about\dots''.
-``The project's aim is to identify the general valid principles for the
-connection between parameter X and Y for everybody\dots''. ``The project's aim is to
-find new technical solutions to problems in the following area:\dots.'' ``The
-project's aim is to compare technology A with technology B as a solution to the
-needs of C.'' ``The project aims to present a decision-making basis for\dots''
-``The project aims to investigate whether or not it is realistic to expect that
-technology A could be used for purpose B in the future.''
+Explain why we are doing this, the higher reason for this work i.e. the purpose. The project's aim
+should be written as an insightful description of the direction in which you want to work, your
+hopes with regards to the possible outcomes of the project, and of the projects' higher purpose. Be
+visionary and futuristic regarding the end goal of the thesis.
 
-\subsection{\translate{Problem statement}}\label{subsec:problem}
-Make a clear problem statement. Preferably in the form: The investigated problem
-statement of this thesis is\dots 
-
-The specified area must be answered later in the report's results, and in its
-conclusion. The problem statement should be so clearly defined, that deciding
-whether or not the problem has been resolved should be easy and understandable.
+Make a clear problem statement.  Preferably in the form: The investigated problem of this thesis is…
+The specified area must be answered later in the report's results and in its conclusion. The problem
+statement should be so clearly defined, that deciding whether or not the problem has been resolved
+should be easy and understandable.
 
 \subsection{\translate{Scientific goals}/
-            \translate{Knowledge goals}/
             \translate{Research questions}}\label{subsec:researchquestion}
 
-Split this hard problem into a number of achievable, concrete, and verifiable
-scientific/knowledge goals or a number of research questions. Explain what the
-scientific knowledge gained from this work will be.
+Choose only one of the headlines. Split this hard problem into a number of achievable, concrete,
+measurable, and verifiable scientific goals or a number of research questions that you will answer.
+Use adjectives and quantify them when possible. Explain what the scientific knowledge gained from
+this work will be.
+
 \begin{enumerate}
   \item ???
   \item ???
