A 'vim command' sneaked into the text.

--- a/02-theory.tex
+++ b/02-theory.tex
@@ -27,7 +27,7 @@ something similar to what you have done. One good place to begin this is work is
 by searching for similar works to yours on Google Scholar.
 
 \subsubsection{Example of a related work}\label{subsubsec:examplerelatedwork}
-iExplain how your work will be similar and how you work will be different from
+Explain how your work will be similar and how you work will be different from
 their work. Put your work into relation to theirs.  Continue the list with one
 heading for each concrete piece of related work.
 
