Updated chapter 3 based on latest docx template

--- a/03-method.tex
+++ b/03-method.tex
@@ -5,24 +5,29 @@ should contain information for the reader to interpret your results and repeat
 your work, i.e.\ in order to check the results. Here, the tools, assumptions,
 mathematical models, performance measures and assessment criteria are presented.
 
-\subsection{\translate{Scientific method
-  description}}\label{subsec:scientificmethod}
-Explain your scientific method. Quantitative method? Etc.\ 
+\subsection{\translate{Scientific method description}}\label{subsec:scientificmethod}
+Explain your scientific method. Quantitative method? Design science? Engineering research? etc. 
 
 Explain how you will attack and work with each of the scientific/knowledge
 goals/research questions. One paragraph per scientific goal/question is often
 enough.
 
 \subsection{\translate{Project method description}}\label{subsec:projectmethod}
-Explain your project method. What are your milestones?
-Split this hard work in this project into a number of achievable project
-goals/milestones/phases. Explain how you will attack and work with each of
-these project/implementation milestones. Justify your choice of
-methodology/model. Comment on the method's possible weaknesses and problems that
-may arise during actual implementation. One paragraph per milestone/phase is
-often enough.
 
-\subsection{\translate{Evaluation method}}\label{subsec:evalmethod}
+Explain your project method. Split the work into a number of achievable milestones/phases. Many
+theses work in computer engineering are typically split into the following parts: 
+\emph{Theory} (in which you will gain more knowledge to be able to solve the problem),
+\emph{Pre-study} (where you will further refine your requirements, approach, design, etc.),
+\emph{Implementation} (where you will build some artifact), Measure (in which you will perform
+measurements on your artifact), and \emph{Evaluation} (where you will analyze and evaluate your
+results and measurements).  
+
+Explain how you will work and do within each of these milestones/phases. Justify
+your choice of methodology/model. What metrics will you use to evaluate your work? Comment on the
+method's possible weaknesses and problems that may arise during actual implementation. A flowchart
+can help in visualizing the work. One paragraph per milestone/phase is often enough to write.
+
+\subsection{\translate{Project evaluation method}}\label{subsec:evalmethod}
 How will you look back upon your whole thesis work in the end and evaluate if it
 was a success? Focus on your whole thesis project process and remember that this
 is different from your measurements/evaluation of your implementation.
