--- a/04-prestudy.tex
+++ b/04-prestudy.tex
@@ -1,19 +1,31 @@
-\section{\translate{Pre study}}\label{sec:prestudy} 
-       
-This chapter will present the different options you have faced and made your
-choice between.
+\section{\translate{Pre study}/\translate{Approach}}\label{sec:prestudy} 
 
-\subsection{\translate{Solution alternatives}}\label{subsec:solutionalt}
-Explain the different solution options/alternatives.
+Choose only one of the headlines. This chapter will be substantially different depending on your
+thesis topic, direction, and scientific level. But in this chapter, you will present the different
+options you have faced and made your choice between, or you will explain the pre-study that has led
+up to your design, implementation, and your analysis of different requirement.        
 
-\subsubsection{Alternative X}\label{subsubsec:altx}
-Present and summarize the alternatives that you have considered. Make them even
-in length and style, to be of equal in importance. Continue the list with all
-alternatives, one heading for each alternative.
+\subsection{\translate{Requirements capturing}/\translate{Approach alternatives}}\label{subsec:solutionalt}
+Explain the requirement capturing and the identified requirements, or the different approach alternatives.
 
-\subsection{\translate{Comparison of solutions}}\label{subsec:comparesolution}
-Compare the different solutions to another Benefits, drawbacks? Pros vs cons? A
-table for clear comparison can be used.
+\subsubsection{Alternative X/Approach X}\label{subsubsec:altx}
+Present and summarize the potential approaches or requirements that you have considered. Make them
+even in length and style, to be of equal in importance. Continue the list with all
+alternatives/requirement, one heading for each.
 
-\subsection{\translate{Chosen solution}}\label{subsec:chosensolution}
-Present your chosen solution. Motivate why this was chosen over the others etc.\
+\subsubsection{Another requirement/alternative}
+Another requirement or potential approach.
+
+\subsubsection{Etc.\ until all has been covered}
+Another, etc.
+
+\subsection{\translate{Requirement analysis}/\translate{Comparison of
+    approaches}}\label{subsec:compareapproach}
+Analyze the identified requirements, compare different approaches to another, benefits, drawbacks?
+Pros vs cons? A table for clear comparison can be used, for example a Pugh matrix.
+
+\subsection{\translage{Proposed approach}/\translate{Chosen approach}}\label{subsec:chosenapproach}
+Present your proposed or chosen approach. It is very important to motivate why this was chosen over
+the others. Connect back to your overall aim and problem statement, to ensure that the chosen
+approach actually can answer your scientific goals/research questions.
+
