--- a/05-implementation.tex
+++ b/05-implementation.tex
@@ -1,5 +1,9 @@
-\section{\translate{Implementation}}\label{sec:implementation}
-Start this chapter with an overview of your work and an overview block figure. See
+\section{\translate{Implementation}/\translate{Design}}\label{sec:implementation} 
+Choose only one of the headlines. In this chapter you will explain all the technical details of your
+work. Start this chapter with an overview of your work and an overview block figure with the
+protocols, algorithms, and technologies written out. Basically, as form of UML component diagram.
+You can also use storyboards, mock-up designs, state diagrams to show the overall structure. See
+Figure 1 for an example. All figures must be references from the text. 
 \cref{fig:overview}. All figures must be references from the text.
 
 \begin{figure}
